--- a/styles/ourPets.css
+++ b/styles/ourPets.css
@@ -51,8 +51,21 @@
     margin: auto;
     display: flex;
     flex-direction: column;
+    
     align-items: center;
     gap: 45px   ;
+}
+@media (max-width:1280px) {
+    .pets-section {
+        width: 100%;
+        min-width: 768px;
+
+    }
+}
+@media (max-width: 769px) {
+    .pets-section {
+        min-width: 320px;
+    }
 }
 .pets-heading {
     width: 400px;
@@ -69,6 +82,7 @@
 .pets-cards {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     gap: 40px   ;
     
 }
@@ -122,7 +136,16 @@
     font-size: 20px;
     line-height: 115%;
 }
+.slider-card-pets {
+    width: 270px;
+    height: 435px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #fff;
+    border-radius: 9px;
+    
+}
 footer {
-    position: sticky;
-    bottom: 0;
+   
 }
